# ytm-player

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  flake.nix  pyproject.toml
.github/workflows/: aur-publish.yml  ci.yml  publish.yml
.superpowers/brainstorm/251942-1777596586/content/: architecture-options.html  components-theming.html  content-pipeline.html  hero-assets.html  page-composition.html  prototype-b-plus.html  prototype-b.html  prototype-switcher.html  repo-deploy.html  scope-comparison.html  seo-hygiene.html  sitemap-v2.html  sitemap.html  waiting.html  zz-design-index.html  zzz-spec-ready.html
.superpowers/brainstorm/251942-1777596586/state/: server-stopped
aur/: .SRCINFO  PKGBUILD
docs/: architecture.md  configuration.md  installation.md  keybindings.md  troubleshooting.md
src/ytm_player/: __init__.py  __main__.py  app.py  cli.py  ipc.py
src/ytm_player/app/: __init__.py  _app.py  _base.py  _commands.py  _ipc.py  _keys.py  _mpris.py  _navigation.py  _playback.py  _session.py  _sidebar.py  _track_actions.py
src/ytm_player/config/: __init__.py  keymap.py  paths.py  settings.py
src/ytm_player/services/: __init__.py  audio_meter.py  auth.py  cache.py  discord_rpc.py  download.py  history.py  lastfm.py  lrclib.py  macos_eventtap.py  macos_media.py  mediakeys.py  mpris.py  player.py  queue.py  radio_browser.py  spotify_import.py  station_favorites.py  stream.py  yt_dlp_options.py  ytmusic.py
src/ytm_player/ui/: __init__.py  header_bar.py  playback_bar.py  theme.py
src/ytm_player/ui/pages/: __init__.py  browse.py  context.py  help.py  library.py  liked_songs.py  lyrics.py  queue.py  recently_played.py  search.py  stations.py
src/ytm_player/ui/popups/: __init__.py  actions.py  confirm_popup.py  create_playlist_popup.py  input_popup.py  playlist_picker.py  search_filter.py  spotify_import.py
src/ytm_player/ui/sidebars/: __init__.py  lyrics_sidebar.py  playlist_sidebar.py
src/ytm_player/ui/widgets/: __init__.py  _visualizer_modes.py  _visualizer_plugins.py  album_art.py  progress_bar.py  track_table.py  visualizer.py
src/ytm_player/utils/: __init__.py  bidi.py  doctor.py  formatting.py  logging.py  terminal.py
tests/: conftest.py
tests/test_app/: test_pane_focus.py  test_playback.py  test_sidebar_playlist_delete.py  test_theme_cache.py  test_ytm_history_report.py
tests/test_config/: test_keymap.py  test_settings.py  test_settings_extended.py  test_settings_validation.py
tests/test_integration/: conftest.py  test_mutation_cascade.py  test_page_failure_states.py
tests/test_services/: test_audio_meter.py  test_auth.py  test_auth_cookies_file.py  test_auth_multi_account.py  test_auth_validate.py  test_cache.py  test_discord_rpc.py  test_download.py  test_history.py  test_ipc.py  test_lastfm.py  test_libmpv_discovery.py  test_macos_eventtap.py  test_macos_media.py  test_mediakeys.py  test_mpris_metadata.py  test_mpris_platform_guard.py  test_player.py  test_playlist_radio.py  test_progressive_loading.py  test_queue.py  test_queue_thread_safety.py  test_radio_browser.py  test_spotify_import.py  test_station_favorites.py  test_stream.py  test_subscribe_artist.py  test_yt_dlp_options.py  test_ytmusic.py  test_ytmusic_concurrency.py  test_ytmusic_discovery_mix.py  test_ytmusic_multi_seed_radio.py
tests/test_ui/: test_actions_popup.py  test_artist_actions.py  test_create_playlist_popup.py  test_play_selected_unified.py  test_playlist_picker.py  test_recently_played_tabs.py  test_track_table_remove.py  test_visualizer_modes.py
tests/test_utils/: test_formatting.py  test_logging.py
thoughts/shared/reviews/: 2026-05-19_12-06-21_feature-playlist-improvements.md
