[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ytm-player"
dynamic = ["version"]
description = "A full-featured YouTube Music TUI client for the terminal"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "textual>=1.0.0",
    "ytmusicapi>=1.11.0",
    "yt-dlp>=2025.1.0",
    "python-mpv>=1.0.0",
    "aiosqlite>=0.20.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
spotify = [
    "spotipy>=2.24.0",
    "spotifyscraper>=2.0.0",
    "thefuzz>=0.22.0",
]
mpris = [
    "dbus-next>=0.2.3",
]
images = [
    "Pillow>=10.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov",
    "ruff",
]

[project.scripts]
ytm = "ytm_player.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ytm_player"]

[tool.hatch.version]
path = "src/ytm_player/__init__.py"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
